<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DDDDDD">

    <!--"头像\n用户名\n积分"-->
    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:elevation="8dip"
        android:background="#00ff00" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="hehehe"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="积分:50"
        android:layout_gravity="center"/>

    <!--评价\投诉\-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff">
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawableRight="@mipmap/ic_launcher"
            android:background="#ffffff"
            android:text="@string/evaluation" />
        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawableRight="@mipmap/ic_launcher"
            android:background="#ffffff"
            android:text="@string/complain"/>
    </LinearLayout>
    <!--订单信息-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableRight="@mipmap/ic_launcher"
        android:background="#ffffff"
        android:text="@string/history"
        android:layout_marginBottom="60dp"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableRight="@mipmap/ic_launcher"
        android:background="#ffffff"
        android:text="@string/myDriver"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableRight="@mipmap/ic_launcher"
        android:background="#ffffff"
        android:text="@string/myCoupon"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawableRight="@mipmap/ic_launcher"
        android:background="#ffffff"
        android:text="@string/exchange"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:text="@string/setup"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F14164"
        android:text="@string/quit"/>
</LinearLayout>